--- a/project1/subtask2/website/templates/graph.html
+++ b/project1/subtask2/website/templates/graph.html
@@ -2,13 +2,15 @@
   content%} {% if user.is_authenticated %}
   <div id="graph-cont">
     <div id="graph">{{ candlestick_chart | safe}}</div>
-    <div class = "stocks-list" style="display: flex; flex-direction: column; ">
-      <button class="submit-btn" name = "Add">MACD</button>
-      <button class="submit-btn" name = "Add">RSI</button>
-      <button class="submit-btn" name = "Add">SMA-50</button>
-      <button class="submit-btn" name = "Add">SMA-100</button>
-      
+    <form method = "POST">
+    <div class="stocks-list" style="display: flex; flex-direction: column">
+      <button class="submit-btn" value="m" name="MACD" type="submit">MACD</button>
+      <button class="submit-btn" value="r" name="RSI" type="submit">RSI</button>
+      <button class="submit-btn" value="s50" name="SMA-50" type="submit">SMA-50</button>
+      <button class="submit-btn" value="s100" name="SMA-100" type="submit">SMA-100</button>
+      <button class="submit-btn" value="clear" name="clear" type="submit" style="background-color: gray;">Clear</button>
     </div>
+  </form>
   </div>
   <div class="graph-pane">
     <form method="POST">
